recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:3: error: not found: value lenght
 if(lenght=0){
    ^